--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
       </div>
     </div>
 
-    <button class="secondary-btn" onclick="addAction()">+ Add Action</button>
+    <button type="button" class="secondary-btn" onclick="addAction()">+ Add Action</button>
+
   </div>
 </div>
 
