Add type attribute to remove button

--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
                oninput="updateSection('section-actions')" />
         <input type="date"
                oninput="updateSection('section-actions')" />
-        <button class="remove-btn" onclick="removeAction(this)">−</button>
+        <button type="button" class="remove-btn" onclick="removeAction(this)">−</button>
+
+        
       </div>
     </div>
 
