Add tabs for investigation tasks and analysis

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
 <header class="topbar">
   <h1>AI-Assisted Decision Support</h1>
   <p>Structured problem & incident resolution</p>
@@ -15,6 +16,7 @@
 
 <div class="layout">
 
+<!-- LEFT PANEL -->
 <div class="left-panel">
 
 <!-- SECTION 1 -->
@@ -40,7 +42,7 @@
 <!-- SECTION 2 -->
 <section class="section" data-section="incident">
   <div class="section-header" onclick="toggleSection(this)">
-    <span class="step">2</span><h2>Incident / Problem Description</h2>
+    <span class="step">2</span><h2>Incident / Problem Description (5W2H)</h2>
   </div>
   <div class="section-body">
     <label>What is the problem?</label>
@@ -87,30 +89,52 @@
   <div class="section-header" onclick="toggleSection(this)">
     <span class="step">4</span><h2>Investigation & Analysis</h2>
   </div>
+
   <div class="section-body">
 
-    <h4>Investigation Tasks</h4>
-    <table id="investigationTasks">
-      <thead>
-        <tr><th>Item</th><th>Owner</th><th>Due</th></tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-    <button onclick="addRow('investigationTasks')">+ Add Task</button>
-
-    <h4>Fishbone (Causes)</h4>
-    <div class="fishbone">
-      <div><h5>People</h5><ul id="fish-people"></ul><button onclick="addListItem('fish-people')">+</button></div>
-      <div><h5>Process</h5><ul id="fish-process"></ul><button onclick="addListItem('fish-process')">+</button></div>
-      <div><h5>Product</h5><ul id="fish-product"></ul><button onclick="addListItem('fish-product')">+</button></div>
-      <div><h5>Procedure</h5><ul id="fish-procedure"></ul><button onclick="addListItem('fish-procedure')">+</button></div>
-      <div><h5>Policy</h5><ul id="fish-policy"></ul><button onclick="addListItem('fish-policy')">+</button></div>
-      <div><h5>Place</h5><ul id="fish-place"></ul><button onclick="addListItem('fish-place')">+</button></div>
+    <!-- TABS -->
+    <div class="tabs">
+      <button class="tab active" onclick="openTab(event,'tab-tasks')">Investigation Tasks</button>
+      <button class="tab" onclick="openTab(event,'tab-fishbone')">Fishbone</button>
+      <button class="tab" onclick="openTab(event,'tab-factors')">Factors</button>
+      <button class="tab" onclick="openTab(event,'tab-why')">5 Whys</button>
     </div>
 
-    <h4>5 Whys</h4>
-    <div id="fiveWhyContainer"></div>
-    <button onclick="addWhyChain()">+ Add 5-Why Chain</button>
+    <!-- TAB 1 -->
+    <div class="tab-content active" id="tab-tasks">
+      <table id="investigationTasks">
+        <thead><tr><th>Item</th><th>Owner</th><th>Due</th></tr></thead>
+        <tbody></tbody>
+      </table>
+      <button onclick="addRow('investigationTasks')">+ Add Task</button>
+    </div>
+
+    <!-- TAB 2 -->
+    <div class="tab-content" id="tab-fishbone">
+      <div class="fishbone">
+        <div><h4>People</h4><ul id="fish-people"></ul><button onclick="addListItem('fish-people')">+</button></div>
+        <div><h4>Process</h4><ul id="fish-process"></ul><button onclick="addListItem('fish-process')">+</button></div>
+        <div><h4>Product</h4><ul id="fish-product"></ul><button onclick="addListItem('fish-product')">+</button></div>
+        <div><h4>Procedure</h4><ul id="fish-procedure"></ul><button onclick="addListItem('fish-procedure')">+</button></div>
+        <div><h4>Policy</h4><ul id="fish-policy"></ul><button onclick="addListItem('fish-policy')">+</button></div>
+        <div><h4>Place</h4><ul id="fish-place"></ul><button onclick="addListItem('fish-place')">+</button></div>
+      </div>
+    </div>
+
+    <!-- TAB 3 -->
+    <div class="tab-content" id="tab-factors">
+      <table id="factorTable">
+        <thead><tr><th>Factor</th><th>Expected</th><th>Actual</th><th>Relevant</th></tr></thead>
+        <tbody></tbody>
+      </table>
+      <button onclick="addRow('factorTable')">+ Add Factor</button>
+    </div>
+
+    <!-- TAB 4 -->
+    <div class="tab-content" id="tab-why">
+      <div id="fiveWhyContainer"></div>
+      <button onclick="addWhyChain()">+ Add 5-Why Chain</button>
+    </div>
 
   </div>
 </section>
@@ -122,9 +146,7 @@
   </div>
   <div class="section-body">
     <table id="correctiveActions">
-      <thead>
-        <tr><th>Action</th><th>Owner</th><th>Due</th><th>Verification</th></tr>
-      </thead>
+      <thead><tr><th>Action</th><th>Owner</th><th>Due</th><th>Verification</th></tr></thead>
       <tbody></tbody>
     </table>
     <button onclick="addRow('correctiveActions')">+ Add Action</button>
