--- a/index.html
+++ b/index.html
@@ -111,14 +111,46 @@
 
     <!-- TAB 2 -->
     <div class="tab-content" id="tab-fishbone">
-      <div class="fishbone">
-        <div><h4>People</h4><ul id="fish-people"></ul><button onclick="addListItem('fish-people')">+</button></div>
-        <div><h4>Process</h4><ul id="fish-process"></ul><button onclick="addListItem('fish-process')">+</button></div>
-        <div><h4>Product</h4><ul id="fish-product"></ul><button onclick="addListItem('fish-product')">+</button></div>
-        <div><h4>Procedure</h4><ul id="fish-procedure"></ul><button onclick="addListItem('fish-procedure')">+</button></div>
-        <div><h4>Policy</h4><ul id="fish-policy"></ul><button onclick="addListItem('fish-policy')">+</button></div>
-        <div><h4>Place</h4><ul id="fish-place"></ul><button onclick="addListItem('fish-place')">+</button></div>
-      </div>
+    <div class="fishbone-grid">
+
+  <div class="fishbone-card">
+    <h4>People</h4>
+    <ul id="fish-people"></ul>
+    <button onclick="addListItem('fish-people')">+ Add cause</button>
+  </div>
+
+  <div class="fishbone-card">
+    <h4>Process</h4>
+    <ul id="fish-process"></ul>
+    <button onclick="addListItem('fish-process')">+ Add cause</button>
+  </div>
+
+  <div class="fishbone-card">
+    <h4>Product</h4>
+    <ul id="fish-product"></ul>
+    <button onclick="addListItem('fish-product')">+ Add cause</button>
+  </div>
+
+  <div class="fishbone-card">
+    <h4>Procedure</h4>
+    <ul id="fish-procedure"></ul>
+    <button onclick="addListItem('fish-procedure')">+ Add cause</button>
+  </div>
+
+  <div class="fishbone-card">
+    <h4>Policy</h4>
+    <ul id="fish-policy"></ul>
+    <button onclick="addListItem('fish-policy')">+ Add cause</button>
+  </div>
+
+  <div class="fishbone-card">
+    <h4>Place</h4>
+    <ul id="fish-place"></ul>
+    <button onclick="addListItem('fish-place')">+ Add cause</button>
+  </div>
+
+</div>
+
     </div>
 
     <!-- TAB 3 -->
